--- a/README
+++ b/README
@@ -1,1 +1,6 @@
 # Php
+
+This is a small Php/MySQL application for management of users photos, like a mini facebook where everyone is friend with everyone.
+
+Here, the user can create his own account, add photos with a specific title and description or, he can delete his pictures.
+In this app users can search each others profile to see posted photos. They can also like or comment on every posted picture.
