--- a/README
+++ b/README
@@ -4,3 +4,5 @@ This is a small Php/MySQL application for management of users photos, like a min
 
 Here, the user can create his own account, add photos with a specific title and description or, he can delete his pictures.
 In this app users can search each others profile to see posted photos. They can also like or comment on every posted picture.
+
+The project contains the SQL database: alexboox.sql and the project itself in AlexBook folder.
